parse positions for comet,phoenix,soroswap and sushi
